# resizecbz

./: pyproject.toml  resizecbz.py
