[tool.poetry]
name = "resizecbz"
version = "0.1.0"
description = "Python script to resize all images inside a CBZ (Comic Book Zip)"
authors = ["tsaost", "Mez <albin.soderstrom@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
